changes in swagger and project structure
