# Project/backend/routes/userroutes.js
@@ -1,13 +1,12 @@
 const express = require('express')
-const {defaultroute,isSignedIn, finduserbyid,isAuthenticated,getuser, isAdmin, deleteuserbyidunauth, updateuserbyidunauth, advancedsignup, updateanyuserbyid, getcardbyid, getapplogs, getactivitylogs, getsystemlogs, tryarray, getroles, isHr, findallusersbyhr, getrolebyuserid, removerolefromuser, getanyuserinfobyid, updateanyuser, deleterole, createrole} = require('../controllers/user')
+const {defaultroute,getuser, deleteuserbyidunauth, updateuserbyidunauth, advancedsignup, getcardbyid, getactivitylogs, getsystemlogs, findallusersbyhr, getanyuserinfobyid, updateanyuser} = require('../controllers/user')
 const { createcard,deletecardbyid,getallcards,addcard, removecard } = require("../controllers/card")
 const router = express.Router()
-const { getuserbyid,deleteuserbyid,updateuserbyid,findallusersbyfname,signup,findallusers,signin,signout } = require("../controllers/user")
-const { user } = require('../models/user')
-// const upload = require("../controllers/upload")
+const { getuserbyid,deleteuserbyid,updateuserbyid,signup,findallusers,signin,signout } = require("../controllers/user")
+
 const { upload,getpresignedurl,sets3params } = require("../services/s3upload")
-const { route } = require('./cardroutes')
 const { sqs } = require('../services/sqs')
+const { finduserbyid, isSignedIn, isAuthenticated, isAdmin, isHr } = require('../middleware/auth')
 
 //default route
 router.get('/',defaultroute);
@@ -37,8 +36,6 @@ router.get('/:id/signout',signout)
 // user Protected Routes
 router.get("/user/:id", isSignedIn, isAuthenticated, getuser);
 router.post('/updateuserbyid/:id',isSignedIn,isAuthenticated,updateuserbyid);
-router.get('/:id/getrolebyuserid',getrolebyuserid)
-router.post('/:id/removerolefromuser',removerolefromuser)
 router.post('/upload/:id', isSignedIn, isAuthenticated,sets3params,upload.array('image', 1),getpresignedurl);
 
 router.post('/tempupdateuserbyid/:id',updateuserbyid);
@@ -51,17 +48,12 @@ router.get('/gettestpresignedurl',getpresignedurl);
 router.post('/deleteuser/:id',isSignedIn,isAuthenticated,isAdmin,deleteuserbyid);
 router.get('/:id/findallusers',isSignedIn,isAuthenticated,isAdmin,findallusers);
 router.get('/:id/findallusersbyhr',isSignedIn,isAuthenticated,isHr,findallusersbyhr);
-router.post('/:id/updateanyuserbyid',updateanyuserbyid)
+
 router.post('/advancedsignup',advancedsignup,sqs)
 router.get('/getsystemlogs',getsystemlogs)
 router.get('/getactivitylogs',getactivitylogs)
-router.get('/getroles',getroles)
-router.post('/:id/deleterole',deleterole)
-router.post('/:id/createrole',createrole)
+
 router.get('/:id/getanyuserinfobyid',getanyuserinfobyid)
 router.post('/:id/updateanyuser',updateanyuser)
-//you can delete this not required
-router.get('/findallbyfname/:fname',findallusersbyfname);
 
-// router.post('/tryarray',tryarray)
 module.exports=router;
